fix: change singolo part 1 html structure

--- a/singolo1.html
+++ b/singolo1.html
@@ -27,70 +27,72 @@
         </header>
 
         <main>
-            <div class="slider-main">
-                <a><img class="left-arrow" src="assets/images/slider/left-arrow.png" alt="left arrow"><img></a>
-                <img class="iphone-vertical" src="assets/images/slider/iPhone_Vertical.png" alt="iPhone vertical"><img>
-                <img class="iphone-horizontal" src="assets/images/slider/iPhone_Horizontal.png" alt="iPhone horizontal"><img>
-                <a><img class="right-arrow" src="assets/images/slider/right-arrow.png" alt="right arrow"><img></a>
-            </div>
-            <div class="slider-bottom"></div>
-        </main>
+            <section>
+                <div class="slider-main">
+                    <a><img class="left-arrow" src="assets/images/slider/left-arrow.png" alt="left arrow"><img></a>
+                    <img class="iphone-vertical" src="assets/images/slider/iPhone_Vertical.png" alt="iPhone vertical"><img>
+                    <img class="iphone-horizontal" src="assets/images/slider/iPhone_Horizontal.png" alt="iPhone horizontal"><img>
+                    <a><img class="right-arrow" src="assets/images/slider/right-arrow.png" alt="right arrow"><img></a>
+                </div>
+                <div class="slider-bottom"></div>
+            </section>
 
-        <footer>
-            <div class="footer-main">
-                <h2>Our services</h2>
-                <div class="services-description">
-                    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
-                        mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus,
-                    tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <section>
+                <div class="footer-main">
+                    <h2>Our services</h2>
+                    <div class="services-description">
+                        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
+                            mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus,
+                        tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                    </div>
+                    <div class="services-list">
+                        <div class="services-item">
+                            <img src="assets\images\services\pen.svg" alt="pen item">
+                            <div class="services-item-description">
+                                <h3>Custom design</h3>
+                                <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                            </div>
+                        </div>
+                        <div class="services-item">
+                            <img src="assets\images\services\bulb.svg" alt="bulb item">
+                            <div class="services-item-description">
+                                <h3>Inovative ideas</h3>
+                                <p>Quisque luctus, quam eget molestie com-modo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                            </div>
+                        </div>
+                        <div class="services-item">
+                            <img src="assets\images\services\heart.svg" alt="heart item">
+                            <div class="services-item-description">
+                                <h3>Love is the answer</h3>
+                                <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+                            </div>
+                        </div>
+                        <div class="services-item">
+                            <img src="assets\images\services\phone.svg" alt="phone item">
+                            <div class="services-item-description">
+                                <h3>Responsive layout</h3>
+                                <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae-sent elit leo.</p>
+                            </div>
+                        </div>
+                        <div class="services-item">
+                            <img src="assets\images\services\bubble.svg" alt="bubble item">
+                            <div class="services-item-description">
+                                <h3>24 / 7 support</h3>
+                                <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen-tesque egestas venenatis lorem.</p>
+                            </div>
+                        </div>
+                        <div class="services-item">
+                            <img src="assets\images\services\star.svg" alt="star item">
+                            <div class="services-item-description">
+                                <h3>Feel like a star</h3>
+                                <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="services-list">
-                    <div class="services-item">
-                        <img src="assets\images\services\pen.svg" alt="pen item">
-                        <div class="services-item-description">
-                            <h3>Custom design</h3>
-                            <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
-                        </div>
-                    </div>
-                    <div class="services-item">
-                        <img src="assets\images\services\bulb.svg" alt="bulb item">
-                        <div class="services-item-description">
-                            <h3>Inovative ideas</h3>
-                            <p>Quisque luctus, quam eget molestie com-modo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
-                        </div>
-                    </div>
-                    <div class="services-item">
-                        <img src="assets\images\services\heart.svg" alt="heart item">
-                        <div class="services-item-description">
-                            <h3>Love is the answer</h3>
-                            <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
-                        </div>
-                    </div>
-                    <div class="services-item">
-                        <img src="assets\images\services\phone.svg" alt="phone item">
-                        <div class="services-item-description">
-                            <h3>Responsive layout</h3>
-                            <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae-sent elit leo.</p>
-                        </div>
-                    </div>
-                    <div class="services-item">
-                        <img src="assets\images\services\bubble.svg" alt="bubble item">
-                        <div class="services-item-description">
-                            <h3>24 / 7 support</h3>
-                            <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen-tesque egestas venenatis lorem.</p>
-                        </div>
-                    </div>
-                    <div class="services-item">
-                        <img src="assets\images\services\star.svg" alt="star item">
-                        <div class="services-item-description">
-                            <h3>Feel like a star</h3>
-                            <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom"></div>
-        </footer>
+                <div class="footer-bottom"></div>
+            </section>
+    </main>
     </div>
 </body>
 </html>
