feat: update layout for singolo part 3

--- a/singolo3.html
+++ b/singolo3.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <main>
             <section>
-                <div class="get-quote">
+                <div class="get-quote-main">
                     <h2>Get a Quote</h2>
                     <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                 </div>
