feat: complete layout for singolo part 3

--- a/singolo3.html
+++ b/singolo3.html
@@ -15,6 +15,35 @@
                 <div class="get-quote-main">
                     <h2>Get a Quote</h2>
                     <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                    <div class="get-quote-form-info">
+                        <form method="POST" action="#">
+                            <input type="text" name="name" placeholder="Name (Required)" required>
+                            <input type="email" name="email" placeholder="Email (Required)" required>
+                            <input type="text" name="subject" placeholder="Subject">
+                            <textarea name="message" placeholder="Describe your project in detail..." cols="30" rows="13"></textarea>
+                            <button type="submit" formmethod="POST">Submit</button>
+                        </form>
+                        <div class="get-quote-info">
+                            <h3>Contact information</h3>
+                            <div class="get-quote-info-content">
+                                <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viver&shy;ra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p>
+                                <div class="get-quote-info-contacts">
+                                    <div>
+                                        <img src="assets/images/contact_info/location.svg" alt="location-icon">
+                                        <a href="#">Elm St. 14/05 Lost City</a>
+                                    </div>
+                                    <div>
+                                        <img src="assets/images/contact_info/phone.svg" alt="phone-icon">
+                                        <a href="tel:035283318635">03528 331 86 35</a>
+                                    </div>
+                                    <div>
+                                        <img src="assets/images/contact_info/mail.svg" alt="mail-icon">
+                                        <a href="mailto:info@singolo.com">info@singolo.com</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="get-quote-bottom"></div>
             </section>
