--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body onload='myFunction()'>
     <div class="wrapper">
         <header>
             <div class="header-main">
@@ -245,6 +245,8 @@
             </div>
         </footer>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
